--- a/chatbott.html
+++ b/chatbott.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="chatbott.css" />
+    <link rel="icon" href="C:\Users\Admin\Desktop\logo.jpg" type="image/x-jpg">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700,300">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.1.2/css/material-design-iconic-font.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400&family=Finger+Paint&display=swap">
